# midiogre

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  PUNS.md  ProperCalc.py  README.md  TODO  TODO.md  WORKSPACE  distance.c  main.c  meson.build  meson_options.txt  midi.c  midi.h  midiogre.pro  midiogre.qbs  midiparo.c  midiparo.pro
build-lin/samples/ginfo/: ginfo.ui
cmake/: CMakeCache.txt  Doxyfile.in  Makefile  PkgCheckModulesFullpath.cmake  cmake_install.cmake  deps.cmake  doxygen.cmake  options.cmake  showoptions.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/src/cli/: Makefile  cmake_install.cmake
cmake/src/midi/: Makefile  cmake_install.cmake
doc/: Doxyfile.in  meson.build
res/: gschemas.compiled  midiogre.glade  midiogre.gresource.xml  midiogre.ui
res/mid/: 009Yatika.mid
res/ui/: midiogre.ui  songbox.ui
samples/: CMakeLists.txt  meson.build  samples.qbs
samples/SQLiteTest/: CMakeLists.txt  db.c
samples/analyze/: CMakeLists.txt  analyze.c  distance.h  extract.c  meson.build
samples/analyze-test/: CMakeLists.txt  analyze-test.c  meson.build
samples/crittest/: CMakeLists.txt  crittest.c
samples/db/: db.c  meson.build
samples/db-test/: CMakeLists.txt  db-test.c  meson.build
samples/dbtest/: CMakeLists.txt  dbtest.c
samples/ext/: ext.c  meson.build
samples/ext-test/: CMakeLists.txt  ext-test.c  exttest.c  meson.build
samples/extract/: CMakeLists.txt  extract.c
samples/exttest/: CMakeLists.txt
samples/ginfo/: CMakeLists.txt  ginfo-app.c  ginfo-main.c  ginfo-mid.c  ginfo-mid.h  ginfo-res.c  ginfo-window.c  ginfo-window.h  ginfo.c  ginfo.gresource.xml  ginfo.ui~  meson.build  test.ui
samples/info/: CMakeLists.txt  info.c  info.qbs  main.c  meson.build
samples/list/: list.c  meson.build
samples/list-test/: BUILD  CMakeLists.txt  list-test.c  meson.build
samples/pop/: meson.build  pop.c
samples/pop-test/: CMakeLists.txt  meson.build  pop-test.c
samples/poptest/: CMakeLists.txt  poptest.c
src/: CMakeCache.txt  CMakeLists.txt  Makefile  main.c  main.qbs  meson.build  midi.c  midi.h  midiogre-app.c  midiogre-app.h  midiogre-gui.c  midiogre-gui.h  midiogre-import.c  midiogre-import.h  midiogre-main.c  midiogre-mid.c  midiogre-mid.h  midiogre-midi.h  midiogre-res.c  midiogre-search.c  midiogre-search.h  midiogre-song.c  midiogre-song.h  midiogre-window.c  midiogre-window.h  midiogre.c  midiogre.gresource.xml
src/analyze/: .analyze.c.swp  .analyze.h.swp  analyze.c  analyze.h  distance.c  distance.h
src/cli/: CMakeLists.txt  main.c  main.c.BACKUP.25762.c  main.c.LOCAL.25762.c  main.c.REMOTE.25762.c
src/gui/: CMakeLists.txt  main.c  midiogre-main.c  midiogre-midi.c  midiogre-window.c
src/lib/: CMakeLists.txt  lib.qbs  meson.build
src/lib/analyze/: CMakeLists.txt  analyze.c  analyze.h  analyze.qbs  distance.h  meson.build  skyline.c  skyline.h
src/lib/database/: CMakeLists.txt  db.c  db.h
src/lib/db/: CMakeLists.txt  db.c  db.h  db.qbs  meson.build
src/lib/distance/: CMakeLists.txt  distance.c  distance.h
src/lib/ext/: CMakeLists.txt  ext.c  ext.h  meson.build
src/lib/list/: BUILD  CMakeLists.txt  list.c  list.h  list.qbs  meson.build
src/lib/mid/: BUILD  CMakeLists.txt  meson.build  mid-str.c  mid-str.h  mid-util.c  mid-util.h  mid.c  mid.h  mid.qbs
src/lib/midi/: midi.h  util.h
src/lib/pop/: CMakeLists.txt  meson.build  pop-balance.c  pop.c  pop.h  pop.qbs
src/lib/popularity/: CMakeLists.txt  popularity.c  popularity.h
src/lib/wildmidi/: CMakeLists.txt
src/lib/wildmidi/djgpp/: README
src/lib/win/: CMakeLists.txt  vasprintf.c
src/midi/: .main.c.swp  .midi.c.swp  CMakeLists.txt  midi.c  midi.h  midiparo.pro  util.c  util.h
test/: distance.c  distance_wip.c  meson.build
test/mids/: 001.mid  amerwmn1.mid  meson.build
