test_mids = files(['amerwmn1.mid',
                   'bass.mid',
                   'bohemian1.mid',
                   #'test.mid',
                   '001.mid',
                   '70smix.mid',
                   #'Various-Christmas_Carols-1-12_Days_Of_Christmas.mid',
                   'Various-Christmas_Carols-2-All_I_Want_For_Christmas_(Is_My_Two_Front_Teeth).mid',
                   'Various-Christmas_Carols-3-Carol_Of_The_Bells.mid',
                   'Various-Christmas_Carols-4-Have_Yourself_A_Merry_Little_Christmas.mid',
                   'Various-Christmas_Carols-5-I_Saw_Mommy_Kissing_Santa_Claus.mid',
                   'Various-Christmas_Carols-6-Jingle_Bells.mid',
                   #'Various-Christmas_Carols-7-Oh_Tannenbaum.mid',
                   'Various-Christmas_Carols-8-Rudolph_The_Red_Nosed_Reindeer.mid',
                   'Various-Christmas_Carols-9-The_Christmas_Song_(John_Lennon).mid'])
